--- a/package.json
+++ b/package.json
@@ -4,30 +4,34 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.3.0",
     "datatable-hrnet-nathan-hallouin": "^1.0.8",
     "HRnet-App": "file:",
-    "next": "14.2.14",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "15.0.1-canary.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.13",
     "test": "file:"
   },
   "devDependencies": {
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.7.8",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.14",
-    "typescript": "^5.6.2"
+    "eslint-config-next": "15.0.1-canary.1",
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
