--- a/package.json
+++ b/package.json
@@ -4,34 +4,32 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
-    "datatable-hrnet-nathan-hallouin": "^1.0.8",
-    "HRnet-App": "file:",
-    "next": "15.0.1-canary.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-redux": "^9.1.2",
-    "styled-components": "^6.1.13",
-    "test": "file:"
+    "@reduxjs/toolkit": "^2.5.0",
+    "hrnet-datatable-styled-components": "^1.0.0",
+    "next": "15.1.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-redux": "^9.2.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@types/node": "^22.7.8",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.1-canary.1",
-    "typescript": "^5.6.3"
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.2",
+    "typescript": "^5.7.2"
   },
   "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2"
   }
 }
