--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HRnet-App",
+  "name": "hrnet-app",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "hrnet-datatable-styled-components": "^1.0.0",
+    "hrnet-datatable-styled-components": "^1.0.1",
     "next": "15.1.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
