Revert "Merge remote-tracking branch 'origin/main'"
This reverts commit 641ef59618d4a650600219f9e95ea110ceff7f18, reversing
changes made to 2e90c9394c1ba2715063db8955c8d2d0f4dc082a.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,5 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "compileOnSave": false,
   "compilerOptions": {
-<<<<<<< HEAD
     "lib": [
       "dom",
       "dom.iterable",
@@ -11,17 +7,13 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-=======
-    "outDir": "./dist/out-tsc",
->>>>>>> origin/main
     "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "isolatedModules": true,
-<<<<<<< HEAD
     "jsx": "react-jsx",
     "incremental": true,
     "baseUrl": ".",
@@ -40,19 +32,3 @@
     "dist"
   ]
 }
-=======
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "moduleResolution": "bundler",
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022"
-  },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
-  }
-}
->>>>>>> origin/main
